oldfiles/ingress-jenkins.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: jenkins-ingress
  namespace: exerciselabs
spec:
  rules:
    - host: jenkins.ephico2real.com
      http:
        paths:
          - path: /
            backend:
              serviceName: service-jenkins
              servicePort: 80
